cluster/kubernetes/internal/homepage/ingress/homepage-http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage
  namespace: internal
spec:
  parentRefs:
    - name: internal-gateway
      namespace: network
      sectionName: homepage
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: homepage-web-svc
          port: 80
